# spire-pdf-mcp-server

./: .gitignore  README.md  TOOLS.md  pyproject.toml
src/spire_pdf_mcp/: __main__.py  server.py
src/spire_pdf_mcp/core/: attachments.py  bookmarks.py  conversion.py  forms.py  pdfdocument.py  security.py  text.py
src/spire_pdf_mcp/utils/: exceptions.py  utils.py
